@@ -2,6 +2,7 @@
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Implemented issue #14429: Support for Solr 1.3.
+- Implemented issue #14594: provide body of error pages.
 
 
 1.0.3 - Monday 09 February 2009
